assets/css/index.css
/**
 * Styles
 */

@import 'normalize.css';

@import 'basscss';
@import 'basscss-addons/modules/responsive-margin';
@import 'basscss-addons/modules/responsive-padding';
@import 'basscss-addons/modules/media-object';
@import 'basscss-addons/modules/all';
@import 'basscss-addons/modules/colors';
@import 'basscss-addons/modules/background-colors';

@import 'extensions/layout';
@import 'extensions/aspects';
@import 'extensions/borders';
@import 'extensions/spaces';

@custom-media --breakpoint-sm (min-width: 760px);
@custom-media --breakpoint-sm-md (min-width: 760px);
@custom-media --breakpoint-md (min-width: 1100px);
@custom-media --breakpoint-md-lg (min-width: 1100px);
@custom-media --breakpoint-lg (min-width: 1440px);


:root {
    --space-1: 10px;
    --space-2: 15px;
    --space-3: 20px;
    --space-4: 30px;

    --border-color: black;
}


@font-face {
    font-family: "akzidenz";
    src: url("../fonts/akzidenz-grotesk-regular.woff2") format("woff2");
}

@font-face {
    font-family: "akzidenz condensed";
    src: url("../fonts/akzidenz.woff") format("woff");
}

html {
    font-size: 16px;
    height: 100%;
    width: 100%;
}

@media (--breakpoint-md) {
    html {
        font-size: 14px;
    }
}

body {
    height: 100%;
    width: 100%;
    font-size: 1rem;
    font-family: "akzidenz", Helvetica, Arial, sans-serif;
	font-variant: normal;
	font-weight: 400;
	line-height: 1.5 !important;
}

.container {
    max-width: 1400px;
    margin: 0 auto;
}

/* TYPE */
h1, .h1, h2, .h2 {
    margin-top: 0;
    margin-bottom: 0;
	font-size: 24px;
	font-variant: normal;
	font-weight: 500;
	line-height: 26.4px;
}

p, .p {
	font-size: 14px;
	font-variant: normal;
	font-weight: 400;
	line-height: 20px;
}

blockquote, .blockquote {
	font-size: 21px;
	font-variant: normal;
	font-weight: 400;
	line-height: 30px;
}

pre, .pre {
	font-size: 13px;
	font-variant: normal;
	font-weight: 400;
	line-height: 18.5714px;
}

a, a:hover, a:visited, a:focus, a:link, a:active {
    color: var(--black);
    text-decoration: none;
}

.zn1 {
    z-index: -1;
}

.crossed {
    background: url('data:image/svg+xml;utf8,<svg id="Layer_1" preserveAspectRatio="none" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600.83 900.55"><defs><style>.cls-1{fill:none;stroke:#000;stroke-miterlimit:10;}</style></defs><title>backgorund_cross</title><line class="cls-1" x1="0.42" y1="0.28" x2="600.42" y2="900.28"/><line class="cls-1" x1="600.42" y1="0.28" x2="0.42" y2="900.28"/></svg>');
    background-repeat:no-repeat;
    background-position:center center;
    background-size: 100% 100%, auto;
}

.max-height-100 {
    max-height: 100vh;
}

.max-width-100 {
    max-width: 100%;
}

.table {
    display: table;
    padding:0;
    margin: 0;
    height: 100vh;
    width: 100%;
    vertical-align: middle;
}

.tr {
    display: table-row;
    padding:0;
    margin: 0;
    max-width:100vw;
    max-height:100vh;
}

.td {
    display: table-cell;
    padding: 0;
    margin: 0;
    max-width:100vw;
    max-height:100vh;
    text-align:center;
    vertical-align: middle;
}

.td-1{
    text-align: right;
}

.td-2{
    text-align: left;
}

.center-carousel-img {
    box-sizing: border-box;
    max-width:50vw;
    padding: 0;
    margin: 0;
    max-height: calc(100vh - 20px);
}

.object-fit-cover {
    object-fit: cover;
}

.marquee {
    white-space: nowrap;
    overflow: hidden;
    box-sizing: border-box;
}

.marquee span {
    display: inline-block;
    padding-left: 100%;  /* show the marquee just outside the paragraph */
    animation: marquee 15s linear infinite;
}

.marquee span:hover {
    animation-play-state: paused
}

/* Make it move */
@keyframes marquee {
    0%   { transform: translate(0, 0); }
    100% { transform: translate(-100%, 0); }
}

.transition-opacity {
    transition: opacity .3s cubic-bezier(.45,.65,.34,.96);
}

.hover-fade:hover {
    opacity: 0;
    transition: opacity .3s cubic-bezier(.45,.65,.34,.96);
}

.title-story-credit{
  color: #e00505;
  margin-top: 90px;
  text-transform: uppercase;
  margin-left: 18px;
  z-index: -1;
}

.title-story-credit h1,
.title-story-credit h2{
  font-size: 38px !important;
  line-height: .9;
}

.container--story-items{
  margin-top: 110px;
}

.col-right .image-credit{
  margin-left: -1px;
}

.container--stories{
  background: #f33;
  margin-top: 0;
  margin-left: 0 !important;
  margin-right: 0 !important;
  padding: 50px !important;
}

.card-listing-page{
  padding: 5px;
}

.hover-line-through:hover {
    text-decoration: line-through;
}

.cursor-pointer:hover {
    cursor: pointer;
}

.v-centre {
    position:absolute;
    top:50%;
    transform:translateY(-50%)
}

.inactive-link {
    pointer-events: none;
    text-decoration: line-through;
}

.xx-large {
	font-size: 100px;
}

@media (--breakpoint-md) {
	.xx-large {
		font-size: 150px;
	}
}

.opacity-0 {
    opacity: 0;
}

.opacity-1 {
    opacity: 1;
}

.link-prev,
.link-next{
  background-color: #fff;
  display: block;
}


.link-prev .skew,
.link-next .skew{
  -webkit-transform: skewX(0deg);
  transform: skewX(0deg);

  -webkit-transition: all .4s ease-out;
  -moz-transition: all .4s ease-out;
  -o-transition: all .4s ease-out;
  transition: all .4s ease-out;
}

.link-prev:hover .skew,
.link-next:hover .skew{
  -webkit-transform: skewX(35deg);
  transform: skewX(35deg);

  -webkit-transition: all .4s ease-out;
  -moz-transition: all .4s ease-out;
  -o-transition: all .4s ease-out;
  transition: all .4s ease-out;
}

.link-next .border{
  border-left: none;
}

.hover-skew{
  -webkit-transform: skewX(0);
  transform: skewX(0);

  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
  -o-transition: all .2s ease-out;
  transition: all .2s ease-out;
}
.hover-skew:hover{
  -webkit-transform: skewX(35deg);
  transform: skewX(35deg);

  -webkit-transition: all .4s ease-out;
  -moz-transition: all .4s ease-out;
  -o-transition: all .4s ease-out;
  transition: all .4s ease-out;
}

.container-menu{
  margin-top: -1px;
  width: calc(50% - 19px);
}

.hover-card{
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.break-line {
    white-space: pre-line;
}

.limit-line-length {
    max-width: 40rem;
}

